ListasFacil/ParLista.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.2 from ParLista.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pL -> L                                     (0)
	%start_pListInteger -> ListInteger                 (1)
	Integer -> L_integ                                 (2)
	L -> ListInteger                                   (3)
	ListInteger ->                                     (4)
	ListInteger -> Integer                             (5)
	ListInteger -> Integer ',' ListInteger             (6)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	','            { PT _ (TS _ 1) }
	L_integ        { PT _ (TI $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pL       rule  0
	%start_pListInteger rule  1
	Integer         rule  2
	L               rule  3
	ListInteger     rules 4, 5, 6

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pL -> . L                                    (rule 0)

	L_integ        shift, and enter state 3
	%eof           reduce using rule 4

	Integer        goto state 4
	L              goto state 6
	ListInteger    goto state 7

State 1

	%start_pListInteger -> . ListInteger                (rule 1)

	L_integ        shift, and enter state 3
	%eof           reduce using rule 4

	Integer        goto state 4
	ListInteger    goto state 5

State 2

	Integer -> . L_integ                                (rule 2)

	L_integ        shift, and enter state 3


State 3

	Integer -> L_integ .                                (rule 2)

	','            reduce using rule 2
	%eof           reduce using rule 2


State 4

	ListInteger -> Integer .                            (rule 5)
	ListInteger -> Integer . ',' ListInteger            (rule 6)

	','            shift, and enter state 8
	%eof           reduce using rule 5


State 5

	%start_pListInteger -> ListInteger .                (rule 1)

	%eof           accept


State 6

	%start_pL -> L .                                    (rule 0)

	%eof           accept


State 7

	L -> ListInteger .                                  (rule 3)

	%eof           reduce using rule 3


State 8

	ListInteger -> Integer ',' . ListInteger            (rule 6)

	L_integ        shift, and enter state 3
	%eof           reduce using rule 4

	Integer        goto state 4
	ListInteger    goto state 9

State 9

	ListInteger -> Integer ',' ListInteger .            (rule 6)

	%eof           reduce using rule 6


-----------------------------------------------------------------------------
Grammar Totals
-----------------------------------------------------------------------------
Number of rules: 7
Number of terminals: 2
Number of non-terminals: 5
Number of states: 10
